[gd_scene load_steps=6 format=3 uid="uid://exploremap01"]

[ext_resource type="Script" path="res://scripts/map/ExploreMap.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://defaultmap01" path="res://scenes/DefaultMap.tscn" id="2_defaultmap"]
[ext_resource type="PackedScene" uid="uid://m821k4r5rrfn" path="res://scenes/units/ExplorePlayer.tscn" id="3_player"]
[ext_resource type="Environment" uid="uid://exploremapenv01" path="res://scenes/explore_map_env.tres" id="4_env"]

[node name="ExploreMap" type="Node3D"]
script = ExtResource("1_script")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("4_env")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.612, -0.354, 0.707, 0, 0.707, 0.707, -0.791, -0.612, 0.354, 0, 20, 15)
light_energy = 1.4
light_indirect_energy = 0.4
shadow_enabled = true
shadow_blur = 1.5
directional_shadow_mode = 1

[node name="FillLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.5, -0.25, -0.829, 0, 0.857, -0.514, 0.866, -0.453, -0.217, 0, 15, 10)
light_color = Color(0.85, 0.9, 1, 1)
light_energy = 0.5
light_indirect_energy = 0.2

[node name="DefaultMap" parent="." instance=ExtResource("2_defaultmap")]

[node name="ExplorePlayer" parent="." instance=ExtResource("3_player")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="BackButton" type="Button" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
text = "Volver"
